CHANGELOG
Version 1.4
 - Added Tables INV, INVLINES
 - Added Tables ITEMMASTER, DOC, DOCLINES
 - Add InvoiceNum and SalesReturnNum at TBLMAINTENACE
 - Add field SALESID and COSTID at TBLITEM
 - Update TBLCASH and TBLITEM
 - Change DB Version 1.2.3.1
 - HOLDS AUCTION REDEEM at TBLCASH

Version 1.3.0.7
 - Fix Reprint Save
 - Added Remarks field in table OTP
 - Fix bug in Loan Register
 - Fix not displaying Old and New PT in OR receipt
 - Fix double entry in saving void transaction
 - Included Transaction number in remarks in every void transaction
 - Removed Checking Authorization in every renew
 - Fix Wrong Printing OR information
 
Version 1.3
 - Added Tables OPI, PI1, OPT, TBLITEM, TBLSPECS, TBLINTSCHEMES, TBLINTSCHEME_DETAILS
 - Added View PAWN_LIST

Version 1.2.3.9
 - Requires OTP alone in Pullout Module, nullify the privilege 
 - Fix Expiry Generator, get whole month

Version 1.2.3.7
 - Add Audit Console (Base on Maam Irish Needs)
 - Add RePrint indicator on PT and OR
 - Add Disable User Account
 - Add Void Report
 - Add Data Extractor
 - No Posting if No Entries, place atleast zero (0) value
 - Fix Pawning Bug
 - Fix Minor Problems on Journal Entries
 - Fix on Displaying Computation
 - Fix Redeem Report
 - Fix Minor Journal Entry Problem
 - Fix Item Pullout Report Date Problem
 - Fix Redemption Report Summary
 - Fix Load Report Void display
 - Sanitize fields

Version 1.2.2.12
 - Add Change Password
 - Add New Privileges
 - Include Appraiser
 - Include Reset Password
 - Include Advance Report
 - Include Delete User in User Management
 - Include Item Type Selection on Audit Report
 - Fix Report Money Transfer, Cash In/Out, Dollar (Void Item Display)

Version 1.2.2.9
 - Fix Monthly computation for Cellphone
 - Fix Journal Entry Summary
 - Fix Money Transfer Send In/Payout Name
 - Fix Minor Change Rate Problem
 - Fix Loan Register Report Unsort PT
 - Fix OR Sequence Report
 - Fix Void Errors
 - Fix Error on TRANSID
 - Add Foreign Currency